--- a/portfolio.html
+++ b/portfolio.html
@@ -101,43 +101,43 @@
 						</ol>
 					</nav>
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Items</span></h2>
-				<p class="row animate-box">We have collected <mark style="background-color: #cc0000; opacity:0.8; color:white;">10 items</mark>, mixing <mark style="background-color: #cc0000; opacity:0.8; color:white;">archival documents</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">bibliographical records</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">artifacts</mark> able to describe the same idea: the Battle of Waterloo. They have been chosen from from archives, museums and libraries web sites. Each item presents a <mark style="background-color: #cc0000; opacity:0.8; color:white;">description about people, places, dates, subjects/concepts</mark> to which it is related.</p>
+				<p class="row animate-box">We have collected <mark style="background-color: #cc0000; opacity:0.8; color:white;">10 items</mark>, mixing <mark style="background-color: #cc0000; opacity:0.8; color:white;">archival documents</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">bibliographical records</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">artifacts</mark> able to describe the same idea: the Battle of Waterloo. They have been chosen from archives, museums and libraries web sites.</p>
 				<div class="row animate-box" data-animate-effect="fadeInLeft">
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="http://www.musee-armee.fr/collections/base-de-donnees-des-collections/objet/redingote-et-bicorne-de-napoleon-ier.html" target="_blank">
 							<img src="images/work_1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Rendigote et bicorne de Napoléon Ier</h3>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="https://www.royalcollection.org.uk/collection/452438-d/letter-of-surrender-from-napoleon-to-the-prince-regent-13-july-1815" target="_blank">
 							<img src="images/work_2.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Letter of surrender from Napoleon</h3>
 						</a>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="https://www.nga.gov/collection/art-object-page.46114.html#overview" target="_blank">
 							<img src="images/work_3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">The Emperor Napoleon in His Study at the Tuileries</h3>
 						</a>
 					</div>
 					<div class="clearfix visible-md-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="http://gallica.bnf.fr/ark:/12148/btv1b84396742.r=waterloo?rk=64378;0" target="_blank">
 							<img src="images/work_5.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Plan de la bataille de Waterloo ou mont St-Jean</h3>
 						</a>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="http://www.britishmuseum.org/research/collection_online/collection_object_details.aspx?objectId=684398&partId=1&museumno=1872,0608.198&page=1" target="_blank">
 							<img src="images/work_7.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">The field of Waterloo</h3>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="http://www.musee-armee.fr/collections/base-de-donnees-des-collections/objet/cuirasse-du-carabinier-fauveau.html" target="_blank">
 							<img src="images/work_8.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Cuirasse de carabinier Fauveau</h3>
 						</a>
@@ -145,72 +145,47 @@
 					<div class="clearfix visible-md-block visible-sm-block"></div>
 
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="http://san.beniculturali.it/web/san/dettaglio-complesso-documentario?codiSanCompl=san.cat.complArch.88660&step=dettaglio&id=88660" target="_blank">
 							<img src="images/work_10.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Carte di Pasotti Francesco</h3>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="https://catalog.loc.gov/vwebv/search?searchCode=LCCN&searchArg=map54000811&searchType=1&permalink=y" target="_blank">
 							<img src="images/work_11.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Europe after the Congress of Vienna</h3>
 						</a>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="https://portal.dnb.de/opac.htm?method=simpleSearch&reset=true&cqlMode=true&query=partOf%3D1155763890&selectedCategory=any" target="_blank">
 							<img src="images/work_13.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Tagebuch vom Wiener Kongreß</h3>
 						</a>
 					</div>
 					<div class="clearfix visible-md-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="https://www.ngv.vic.gov.au/explore/collection/work/4408/" target="_blank">
 							<img src="images/work_12.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">The 28th Regiment at Quatre Bras</h3>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="">
 							<img src="images/work_14.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">*Not inserted work*</h3>
 						</a>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="work.html">
+						<a href="">
 							<img src="images/work_15.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">*Not inserted work*</h3>
 						</a>
 					</div>
 				</div>
 			</div>
-
-			<hr>
 		
-			<div class="fh5co-narrow-content">
-				<div class="row">
-					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h1 class="fh5co-heading-colored">Add new objects and test our model!</h1>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<p class="fh5co-lead">Our aim is abstraction- A concept or an idea not associated with any specific instance.</p>
-						<p><a href="#" class="btn btn-primary btn-outline">Get Started</a></p>
-					</div>
-					<div class="col-md-7 col-md-push-1">
-						<div class="row">
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-							</div>
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-								<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 			<div class="fh5co-narrow-content">
 			<nav aria-label="...">
 				<ul class="pager">
