--- a/about.html
+++ b/about.html
@@ -222,14 +222,14 @@
 					<div class="row" >
 						<div class="col-md-4 text-center animate-box">
 							<span class="fh5co-counter js-counter" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Object</span>
+							<span class="fh5co-counter-label">Items</span>
 						</div>
 						<div class="col-md-4 text-center animate-box">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="130" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Metadata</span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="138" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter-label">Coffee</span>
 						</div>
 						<div class="col-md-4 text-center animate-box">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="2732" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="fh5co-counter js-counter" data-from="0" data-to="2275" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="fh5co-counter-label">Line of Codes</span>
 						</div>
 					</div>
