--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<a href="index.html" alt="Homepage"><img src="images/title.jpg"></a>
 					</h2>
 					<div>
-						<p class="fh5co animate-box">The aim of Battle of the WaterLOD Project is to create an abstract Linked Open model for describing items related to the battle of Waterloo.</p>
+						<p class="fh5co animate-box">The aim of Battle of the WaterLOD Project is to create an abstract Linked Open model for describing data related to the battle of Waterloo.</p>
 						<hr class="my-4 fh5co animate-box">
 						<p class="fh5co animate-box"></p>
 						<img src="images/background.jpg" style="width:100%" class="fh5co-heading animate-box img-responsive">
@@ -158,7 +158,7 @@
 							</div>
 							<div class="fh5co-text">
 								<h3>Explore our <a href="about.html" alt="Project">project</a></h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<p>You can check each of the steps of our project "The Battle of WaterLOD"</p>
 							</div>
 						</div>
 					</div>
@@ -169,7 +169,7 @@
 							</div>
 							<div class="fh5co-text">
 								<h3>Try to <a href="" alt="">browse our data</a></h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<p>An interesting experiment could be trying to implement a system similar to LodLive starting from our data</p>
 							</div>
 						</div>
 					</div>
@@ -180,8 +180,8 @@
 								<i class="fas fa-database" style="font-size:50px;"></i>
 							</div>
 							<div class="fh5co-text">
-								<h3>Find the <a href="portfolio.html" alt="Objects">data and metadata</a></h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<h3>Find the <a href="portfolio.html" alt="Objects">items</a></h3>
+								<p>The battle of Waterloo is central idea and involves Napoleon Bonaparte as person, Waterloo as place, Defeat as concept and 1815 as Date. For each of them, we have different kinds of items.</p>
 							</div>
 						</div>
 					</div>
@@ -192,7 +192,7 @@
 							</div>
 							<div class="fh5co-text">
 								<h3><a href="contact.html" alt="Contact">Contact</a> us</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<p>You can write us everytime you desire or visit us at University here in Bologna! It is so important for us your feedback and advices in order to get our project better and better</p>
 							</div>
 						</div>
 					</div>
