Img-responsive class

--- a/conceptual.html
+++ b/conceptual.html
@@ -166,7 +166,7 @@
 							<mark style="background-color: #cc0000; opacity:0.8; color:white;">DCTERMS</mark>).
 						</p>
 						<p class="animate-box">
-							<img style="width: 1000px;" src="images/who(final).png" alt="">
+							<img style="width: 1000px;" src="images/who(final).png" alt="" class="img-responsive">
 						</p>
 						<br>
 
@@ -183,7 +183,7 @@
 							at the questions we should define the following namespaces.
 						</p>
 						<p class="animate-box">
-							<img style="width: 1000px;" src="images/where(final).png" alt="">
+							<img style="width: 1000px;" src="images/where(final).png" alt="" class="img-responsive">
 						</p>
 						<br>
 
@@ -192,7 +192,7 @@
 								For answering the questions raised during the theoretical model development we have used the <mark style="background-color: #cc0000; opacity:0.8; color:white;">DC</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">RDF(S)</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">CIDOC-CRM</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark> ontologies. defined as follows:
 						</p>
 						<p class="animate-box">
-								<img style="width: 1000px;" src="images/what(final).png" alt="">
+								<img style="width: 1000px;" src="images/what(final).png" alt="" class="img-responsive">
 							</p>
 						<br>
 
