--- a/description.html
+++ b/description.html
@@ -109,7 +109,8 @@
 					Description of data
 					</h2>
 					<div>
-						<p class="animate-box">EXPLAIN DESCRIPTION OF DATA</P>  
+						<p class="animate-box">We have <mark style="background-color: #cc0000; opacity:0.8; color:white;">described some items, using natural language, using our model</mark>. We have created a shared folder in Google Drive containing all the needed files <a href="https://drive.google.com/drive/folders/1YXpVIixVn0IR1Wn89T91GYNGBDvbuhsR" target="_blank">here</a>.</p> 
+						<p class="animate-box"><img src="images/table.png" style="width:80%" class="img-responsive"></p>  
 					
 					<nav aria-label="...">
 						<ul class="pager">
