--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div id="backgroundImg">
 				<div class="fh5co-narrow-content">
 					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">
-					<a href="index.html" alt="Homepage"><img src="images/title.jpg"></a>
+					<a href="index.html" alt="Homepage"><img src="images/title.jpg" class="img-responsive"></a>
 					</h2>
 					<div>
 						<p class="fh5co animate-box">The aim of Battle of the WaterLOD Project is to create an abstract Linked Open model for describing data related to the battle of Waterloo.</p>
