Concept/Subject modification

--- a/conceptual.html
+++ b/conceptual.html
@@ -187,7 +187,7 @@
 						</p>
 						<br>
 
-						<h3 class="animate-box" id="who">Place</h3>
+						<h3 class="animate-box" id="who">Concept / Subject</h3>
 						<p class="animate-box">
 								For answering the questions raised during the theoretical model development we have used the <mark style="background-color: #cc0000; opacity:0.8; color:white;">DC</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">RDF(S)</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">CIDOC-CRM</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark> ontologies. defined as follows:
 						</p>
