--- a/theoretical.html
+++ b/theoretical.html
@@ -230,7 +230,7 @@
 							is the most used because: it is the most functional, its properties are very general and it grants a very high level
 							of abstraction. <mark style="background-color: #cc0000; opacity:0.8; color:white;">SKOS</mark> is a standard that easily define what exaclty is a concept, so we adopted it in order to give
 							the right definition of concept. <mark style="background-color: #cc0000; opacity:0.8; color:white;">CIDOC-CRM</mark> is the best way to describe, in a general way, people linked to the concept.
-							FOAF, instead, allows us to introduce how a concept find its material representation (following the idea of <mark style="background-color: #cc0000; opacity:0.8; color:white;">DBPedia</mark>).
+							<mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark>, instead, allows us to introduce how a concept find its material representation (following the idea of <mark style="background-color: #cc0000; opacity:0.8; color:white;">DBPedia</mark>).
 						</p>
 						<p class="animate-box">Go back to the
 							<a href="#top">questions</a>
