Modification on theoretical

--- a/theoretical.html
+++ b/theoretical.html
@@ -223,7 +223,7 @@
 							concept related to the item. Of course, our model has also to describe the subject/concept proper of an item. Our
 							mission, here, is to describe the item and the concept expressed by the item itself. We raised some questions on this
 							matter, starting from "What is the name of the concept?", "What type of entity is this?", "What is the subject or
-							theme of item?" or "in which category the concept belongs?" (<mark style="background-color: #cc0000; opacity:0.8; color:white;">(General belongsToCategory Army</mark>).
+							theme of item?" or "To which category the concept belongs?" (<mark style="background-color: #cc0000; opacity:0.8; color:white;">(General belongsToCategory Army</mark>).
 						</p>
 						<p class="animate-box">
 							Some of these questions are general and fully handled with the <mark style="background-color: #cc0000; opacity:0.8; color:white;">Dublin Core Metadata Initiative</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">RDF(S)</mark>. The <mark style="background-color: #cc0000; opacity:0.8; color:white;">DC</mark> standard
