--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
 							</div>
 							<div class="fh5co-text">
 								<h3><strong><a href="conceptual.html" alt="">Conceptual model</a></strong></h3>
-								<p>Creation of a model by reusing existing models, as RDF, RDFS, SKOS, OWL, DC, EAC-CPF, FRBR and others</p>
+								<p>Creation of a model by reusing existing models, as FOAF, RDFS, SKOS, DC, EAC-CPF and others</p>
 							</div>
 						</div>
 					</div>
