Complete description page

--- a/description.html
+++ b/description.html
@@ -95,8 +95,60 @@
 					Description of data
 					</h2>
 					<div>
-						<p class="animate-box">We have <mark style="background-color: #cc0000; opacity:0.8; color:white;">described some items, using natural language, using our model</mark>. We have created a shared folder in Google Drive containing all the needed files <a href="https://drive.google.com/drive/folders/1YXpVIixVn0IR1Wn89T91GYNGBDvbuhsR" target="_blank">here</a>.</p> 
-						<p class="animate-box"><img src="images/table.png" style="width:80%" class="img-responsive"></p>  
+						<p class="animate-box">We have <mark style="background-color: #cc0000; opacity:0.8; color:white;">described some items, using natural language, using our model</mark>. We have created a shared folder in Google Drive containing all the needed files <a href="https://drive.google.com/drive/folders/1YXpVIixVn0IR1Wn89T91GYNGBDvbuhsR" target="_blank">here</a>, so you can click on the links.</p> 
+						<p class="animate-box"><img src="images/table.png" style="width:80%" class="img-responsive"></p> 
+						<p class="animate-box">So, we have done the <a id="descrizioni">descriptions</a> of:</p>
+						<ul class="animate-box">
+							<li><a href="#persona">PERSON</a>: Napoleon and Fauveau</li>
+							<li><a href="#soggetto">SUBJECT/CONCEPT</a>: Surrender, General and Killed</li>
+							<li><a href="#luogo">PLACE</a>: Rochefort and Waterloo</li>
+						</ul>
+						<p class="animate-box">
+							<h3 class="animate-box"><a id="persona">PERSON</a></h3>
+							<ul class="animate-box">
+								<li class="animate-box"><h4>Napoleon</h4>
+									<img src="images/napoleon.png" class="animate-box">
+								</li>
+							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
+								<li class="animate-box"><h4>Fauveau</h4>
+									<img src="images/fauveau.png" class="animate-box">
+								</li>
+							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
+
+							</ul>
+						</p>
+
+						<p class="animate-box">
+							<h3 class="animate-box"><a id="soggetto">SUBJECT / CONCEPT</a></h3>
+							<ul class="animate-box">
+								<li class="animate-box"><h4>Surrender</h4>
+									<img src="images/surrender.png" class="animate-box">
+								</li>
+							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
+								<li class="animate-box"><h4>General</h4>
+									<img src="images/general.png" class="animate-box">
+								</li>
+							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
+								<li class="animate-box"><h4>Killed</h4>
+									<img src="images/killed.png" class="animate-box">
+								</li>
+							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
+							</ul>
+						</p>
+
+						<p class="animate-box">
+							<h3 class="animate-box"><a id="luogo">PLACE</a></h3>
+							<ul class="animate-box">
+								<li class="animate-box"><h4>Rochefort</h4>
+									<img src="images/rochefort.png" class="animate-box">
+								</li>
+							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
+								<li class="animate-box"><h4>Waterloo</h4>
+									<img src="images/waterloo.png" class="animate-box">
+								</li>
+							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
+							</ul>
+						</p>
 					
 					<nav aria-label="...">
 						<ul class="pager">
