--- a/metadata.html
+++ b/metadata.html
@@ -95,10 +95,13 @@
 					Metadata standards alignement
 					</h2>
 					<div>
-						<p class="animate-box">The alignment below is between different metadata standard related to people, places, dates and concepts, used by cultural heritage institutions.</p>
+						<p class="animate-box">The <mark style="background-color: #cc0000; opacity:0.8; color:white;">alignment</mark> below is between <mark style="background-color: #cc0000; opacity:0.8; color:white;">different metadata standard related to people, places, dates and concepts, used by cultural heritage institutions</mark>.</p>
 					</div>
 					<div>
 						<img src="images/alignement.png" class="img-responsive animate-box" alt="">
+					</div>
+					<div>
+						<p class="animate-box">View also the <a href="alignementmeta.pdf" target="_blank">metadata standards alignement made for all our items</a>.</p>
 					</div>
 					<nav aria-label="...">
 						<ul class="pager">
