--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,10 @@
 					</nav>
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Items</span></h2>
 				<p class="row animate-box">We have collected <mark style="background-color: #cc0000; opacity:0.8; color:white;">10 items</mark>, mixing <mark style="background-color: #cc0000; opacity:0.8; color:white;">archival documents</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">bibliographical records</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">artifacts</mark> able to describe the same idea: the Battle of Waterloo. They have been chosen from archives, museums and libraries web sites.</p>
+			<div class="animate-box">
+			<h3 class="animate-box">PEOPLE: Napoleon</h3>
+			<hr>
+			</br>
 				<div class="row animate-box" data-animate-effect="fadeInLeft">
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="http://www.musee-armee.fr/collections/base-de-donnees-des-collections/objet/redingote-et-bicorne-de-napoleon-ier.html" target="_blank">
@@ -108,11 +112,16 @@
 							<h3 class="fh5co-work-title">The Emperor Napoleon in His Study at the Tuileries</h3>
 						</a>
 					</div>
+				</div>
+				<div class="animate-box">
+					<h4 class="animate-box">PLACE: Waterloo</h4>
+					<hr>
+					</br>
 					<div class="clearfix visible-md-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="http://gallica.bnf.fr/ark:/12148/btv1b84396742.r=waterloo?rk=64378;0" target="_blank">
 							<img src="images/work_5.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Plan de la bataille de Waterloo ou mont St-Jean</h3>
+							<h3 class="fh5co-work-title">Plan de la bataille de Waterloo</h3>
 						</a>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
@@ -125,9 +134,14 @@
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="http://www.musee-armee.fr/collections/base-de-donnees-des-collections/objet/cuirasse-du-carabinier-fauveau.html" target="_blank">
 							<img src="images/work_8.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Cuirasse de carabinier Fauveau</h3>
+							<h3 class="fh5co-work-title">*Not inserted work*</h3>
 						</a>
 					</div>
+				</div>
+				<div class="animate-box">
+					<h4 class="animate-box">DATE: 1815</h4>
+					<hr>
+					</br>
 					<div class="clearfix visible-md-block visible-sm-block"></div>
 
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
@@ -149,6 +163,11 @@
 							<h3 class="fh5co-work-title">Tagebuch vom Wiener Kongreß</h3>
 						</a>
 					</div>
+				</div>
+				<div class="animate-box">
+					<h4 class="animate-box">SUBJECT/CONCEPT: Defeat</h4>
+					<hr>
+					</br>
 					<div class="clearfix visible-md-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="https://www.ngv.vic.gov.au/explore/collection/work/4408/" target="_blank">
@@ -166,10 +185,11 @@
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
 						<a href="">
 							<img src="images/work_15.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">*Not inserted work*</h3>
+							<h3 class="fh5co-work-title"></h3>
 						</a>
 					</div>
 				</div>
+			</div>
 			</div>
 		
 			<div class="fh5co-narrow-content">
