--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
 				<div class="row">
 					<div class="col-md-4 fh5co-staff">
 						<img src="images/gianmarco.jpeg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
-						<h3>Giammarco Spinaci</h3>
+						<h3>Gianmarco Spinaci</h3>
 						</br>
 						<p>Giammarco is graduated in Computer Science. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. His main areas of interest concern Text Retrieval, Bibliometrics and Semantic Web.</p>
 						<ul class="fh5co-social">
