Modification in items

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,8 +132,8 @@
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="http://www.musee-armee.fr/collections/base-de-donnees-des-collections/objet/cuirasse-du-carabinier-fauveau.html" target="_blank">
-							<img src="images/work_8.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+						<a href="" target="_blank">
+							<img src="images/work_15.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">*Not inserted work*</h3>
 						</a>
 					</div>
@@ -145,9 +145,9 @@
 					<div class="clearfix visible-md-block visible-sm-block"></div>
 
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="http://san.beniculturali.it/web/san/dettaglio-complesso-documentario?codiSanCompl=san.cat.complArch.88660&step=dettaglio&id=88660" target="_blank">
-							<img src="images/work_10.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">Carte di Pasotti Francesco</h3>
+						<a href="" target="_blank">
+							<img src="images/work_14.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<h3 class="fh5co-work-title">*Not inserted work*</h3>
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
@@ -176,16 +176,16 @@
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="">
-							<img src="images/work_14.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title">*Not inserted work*</h3>
+						<a href="http://www.musee-armee.fr/collections/base-de-donnees-des-collections/objet/cuirasse-du-carabinier-fauveau.html" target="_blank">
+							<img src="images/work_8.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<h3 class="fh5co-work-title">Cuirasse du carabinier Fauveau</h3>
 						</a>
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="">
-							<img src="images/work_15.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
-							<h3 class="fh5co-work-title"></h3>
+						<a href="" target="_blank">
+							<img src="images/work_10.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
+							<h3 class="fh5co-work-title">Carte di Pasotti Francesco</h3>
 						</a>
 					</div>
 				</div>
