--- a/portfolio.html
+++ b/portfolio.html
@@ -183,7 +183,7 @@
 					</div>
 					<div class="clearfix visible-sm-block"></div>
 					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 work-item">
-						<a href="" target="_blank">
+						<a href="http://san.beniculturali.it/web/san/dettaglio-complesso-documentario?codiSanCompl=san.cat.complArch.88660&step=dettaglio&id=88660" target="_blank">
 							<img src="images/work_10.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 							<h3 class="fh5co-work-title">Carte di Pasotti Francesco</h3>
 						</a>
