--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="animate-box">
+				<div class="row animate-box">
 					<h4 class="animate-box">PLACE: Waterloo</h4>
 					<hr>
 					</br>
@@ -138,7 +138,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="animate-box">
+				<div class="row animate-box">
 					<h4 class="animate-box">DATE: 1815</h4>
 					<hr>
 					</br>
@@ -164,7 +164,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="animate-box">
+				<div class="row animate-box">
 					<h4 class="animate-box">SUBJECT/CONCEPT: Defeat</h4>
 					<hr>
 					</br>
@@ -192,6 +192,7 @@
 			</div>
 			</div>
 		
+			
 			<div class="fh5co-narrow-content">
 			<nav aria-label="...">
 				<ul class="pager">
@@ -199,7 +200,9 @@
     				<li class="next"><a href="metadata.html"> Metadata standards alignement <span aria-hidden="true">&rarr;</span></a></li>
   				</ul>
 			</nav>
-		</div>
+		
+	</div>
+		
 		</div>
 	</div>
 
