--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>Site Map | Policy | Contact</span> <span>Latest modification April 2018</span> <span>Blog | Newsletter</span> <span>Copyright Creative Commons</span></small></p>
+				<p><small><a href="about.html">Site Map</a> | Policy | <a href="contact.html">Contact</a></span> <span>Latest modification April 2018</span> <span>Blog | Newsletter</span> <span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Copyright Creative Commons</a></span></small></p>
 				<ul>
 					<li><a href="#"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
