Img responsive in description

--- a/description.html
+++ b/description.html
@@ -107,11 +107,11 @@
 							<h3 class="animate-box"><a id="persona">PERSON</a></h3>
 							<ul class="animate-box">
 								<li class="animate-box"><h4>Napoleon</h4>
-									<img src="images/napoleon.png" class="animate-box">
+									<img src="images/napoleon.png" class="img-responsive animate-box">
 								</li>
 							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
 								<li class="animate-box"><h4>Fauveau</h4>
-									<img src="images/fauveau.png" class="animate-box">
+									<img src="images/fauveau.png" class="img-responsive animate-box">
 								</li>
 							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
 
@@ -122,15 +122,15 @@
 							<h3 class="animate-box"><a id="soggetto">SUBJECT / CONCEPT</a></h3>
 							<ul class="animate-box">
 								<li class="animate-box"><h4>Surrender</h4>
-									<img src="images/surrender.png" class="animate-box">
+									<img src="images/surrender.png" class="img-responsive animate-box">
 								</li>
 							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
 								<li class="animate-box"><h4>General</h4>
-									<img src="images/general.png" class="animate-box">
+									<img src="images/general.png" class="img-responsive animate-box">
 								</li>
 							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
 								<li class="animate-box"><h4>Killed</h4>
-									<img src="images/killed.png" class="animate-box">
+									<img src="images/killed.png" class="img-responsive animate-box">
 								</li>
 							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
 							</ul>
@@ -140,11 +140,11 @@
 							<h3 class="animate-box"><a id="luogo">PLACE</a></h3>
 							<ul class="animate-box">
 								<li class="animate-box"><h4>Rochefort</h4>
-									<img src="images/rochefort.png" class="animate-box">
+									<img src="images/rochefort.png" class="img-responsive animate-box">
 								</li>
 							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
 								<li class="animate-box"><h4>Waterloo</h4>
-									<img src="images/waterloo.png" class="animate-box">
+									<img src="images/waterloo.png" class="img-responsive animate-box">
 								</li>
 							<p class="animate-box">Go back to the <a href="#descrizioni">descriptions</a></p>
 							</ul>
