--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
 			<div class="fh5co-footer">
 				<p><small><a href="about.html">Site Map</a> | Policy | <a href="contact.html">Contact</a></span> <span>Latest modification April 2018</span> <span>Blog | Newsletter</span> <span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Copyright Creative Commons</a></span></small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+					<li><a href="#"><img src="images/github-logo.png"<i class="icon-facebook"></i></a></li>
 				</ul>
 			</div>
 
