--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
 				<ul>
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
 					<li><a href="about.html">Project</a></li>
-					<li><a href="#">Browse data</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small><a href="about.html">Site Map</a> | Policy | <a href="contact.html">Contact</a></span> <span>Latest modification April 2018</span> <span>Blog | Newsletter</span> <span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Copyright Creative Commons</a></span></small></p>
+				<p><small>WaterLOD project has been implemented by Martina Dello Buono, Fabio Mariani and Gianmarco Spinaci for "Knowledge Organization and Digital Methods in the Cultural Heritage Domain" examination, University of Bologna.<span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Copyright Creative Commons</a></span></small></p>
 				<ul>
 					<li><a href="#"><img src="images/github-logo.png"<i class="icon-facebook"></i></a></li>
 				</ul>
@@ -148,23 +147,22 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-								<i class="fas fa-sitemap" style="font-size:50px;"></i>
-							</div>
-							<div class="fh5co-text">
-								<h3>Try to <a href="" alt="">browse our data</a></h3>
-								<p>An interesting experiment could be trying to implement a system similar to LodLive starting from our data</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-6">
-						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
-							<div class="fh5co-icon">
 								<i class="fas fa-database" style="font-size:50px;"></i>
 							</div>
 							<div class="fh5co-text">
 								<h3>Find the <a href="portfolio.html" alt="Objects">items</a></h3>
 								<p>The battle of Waterloo is central idea and involves Napoleon Bonaparte as person, Waterloo as place, Defeat as concept and 1815 as Date. For each of them, we have different kinds of items.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+							<div class="fh5co-icon">
+								<i class="fas fa-sitemap" style="font-size:50px;"></i>
+							</div>
+							<div class="fh5co-text">
+								<h3>Try to browse our data <span>To be implemented</span></h3>
+								<p>An interesting experiment could be trying to implement a system similar to LodLive starting from our data</p>
 							</div>
 						</div>
 					</div>
