Links to Github Fabio, Gianmarco and Martina

--- a/about.html
+++ b/about.html
@@ -232,24 +232,16 @@
 						</br>
 						<p>Giammarco is graduated in Computer Science. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. His main areas of interest concern Text Retrieval, Bibliometrics and Semantic Web.</p>
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-google"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://github.com/gspinaci"><i class="fab fa-github"></i></a></li>
 						</ul>
 					</div>
 					<div class="col-md-4 fh5co-staff">
 						<img src="images/martina.jpeg" alt="Free HTML5 Bootstrap Template" class="img-responsive">
 						<h3>Martina Dello Buono</h3>
 						</br>
-						<p>Martina is graduated in Humanities. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. Her main areas of interest concern Web Project Management and Web Design.</p>
+						<p>Martina is graduated in Humanities. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. Her main areas of interest concern Web Design, Computer Graphics and Art.</p>
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-google"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://github.com/martinadellobuono"><i class="fab fa-github"></i></a></li>
 						</ul>
 					</div>
 					<div class="col-md-4 fh5co-staff">
@@ -258,11 +250,7 @@
 						</br>
 						<p>Fabio is graduated in History. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. His main areas of interest concern Knowledge Organization, Museology, Museography and Virtual Environments.</p>
 						<ul class="fh5co-social">
-							<li><a href="#"><i class="icon-google"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://github.com/Fax93"><i class="fab fa-github"></i></a></li>
 						</ul>
 					</div>
 				</div>
