--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,13 @@
 		</aside>
 
 		<div id="fh5co-main">
+			<div class="fh5co-narrow-content">
+				<div class="row">
+					<div class="col-md-5">
+						<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Project</h2>
+					</div>
+				</div>
+			</div>
 
 			<div id="map"></div>	
 
