--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 			</nav>
 
 			<div class="fh5co-footer">
-				<p><small>WaterLOD project has been implemented by Martina Dello Buono, Fabio Mariani and Gianmarco Spinaci for "Knowledge Organization and Digital Methods in the Cultural Heritage Domain" examination, University of Bologna.<span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Copyright Creative Commons</a></span></small></p>
+				<p><small>WaterLOD project has been implemented by Martina Dello Buono, Fabio Mariani and Gianmarco Spinaci.
+				<span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Copyright Creative Commons</a></span></small></p>
 				<ul>
 					<li><a href="https://github.com/WaterLOD"><img src="images/github-logo.png"<i class="icon-facebook"></i></a></li>
 				</ul>
