--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
 						</ol>
 					</nav>
 				<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Items</span></h2>
-				<p class="row animate-box">We have collected <mark style="background-color: #cc0000; opacity:0.8; color:white;">10 items</mark>, mixing <mark style="background-color: #cc0000; opacity:0.8; color:white;">archival documents</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">bibliographical records</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">artifacts</mark> able to describe the same idea: the Battle of Waterloo. They have been chosen from archives, museums and libraries web sites.</p>
+				<p class="row animate-box" id="itemsDescription">We have collected <mark style="background-color: #cc0000; opacity:0.8; color:white;">10 items</mark>, mixing <mark style="background-color: #cc0000; opacity:0.8; color:white;">archival documents</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">bibliographical records</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">artifacts</mark> able to describe the same idea: the Battle of Waterloo. They have been chosen from archives, museums and libraries web sites.</p>
 			<div class="animate-box">
 			<h4 class="animate-box">PEOPLE: Napoleon</h4>
 			<hr>
