--- a/rdf.html
+++ b/rdf.html
@@ -94,21 +94,21 @@
 					<div>
 						<p class="animate-box">We created URIs for 3 different entities and we described each of them in RDF/XML, one of the possibile serializations of RDF:
 							<ul class="animate-box">
-								<li>PEOPLE - Napoleon: <mark style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</mark></li>
+								<li>PEOPLE - Napoleon: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</span></li>
 							</br>
 							<img src="images/xmlnapoleon.jpg" alt="" class="animate-box img-responsive">
 							</br>
 							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/napoleon.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
 							</br>
 							</br>
-								<li>PLACE - Rochefort: <mark style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</mark></li>
+								<li>PLACE - Rochefort: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</span></li>
 							</br>
 							<img src="images/xmlplace.jpg" alt="" class="animate-box img-responsive">
 							</br>
 							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/rochefort.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
 							</br>
 							</br>
-								<li>CONCEPT/SUBJECT: <mark style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</mark></li>
+								<li>CONCEPT/SUBJECT: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</span></li>
 							</br>
 							<img src="images/xmlconcept.jpg" alt="" class="animate-box img-responsive">
 							</br>
