--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
 					</div>
 				</div>
 				<div class="row animate-box">
-					<h4 class="animate-box">PLACE: Waterloo</h4>
+					<h4 class="animate-box" id="subjectSection">PLACE: Waterloo</h4>
 					<hr>
 					</br>
 					<div class="clearfix visible-md-block"></div>
@@ -130,7 +130,7 @@
 					</div>
 				</div>
 				<div class="row animate-box">
-					<h4 class="animate-box">DATE: 1815</h4>
+					<h4 class="animate-box" id="subjectSection">DATE: 1815</h4>
 					<hr>
 					</br>
 					<div class="clearfix visible-md-block visible-sm-block"></div>
@@ -150,7 +150,7 @@
 					</div>
 				</div>
 				<div class="row animate-box">
-					<h4 class="animate-box">SUBJECT/CONCEPT: Defeat</h4>
+					<h4 class="animate-box" id="subjectSection">SUBJECT/CONCEPT: Defeat</h4>
 					<hr>
 					</br>
 					<div class="clearfix visible-md-block"></div>
