Change in structure of the page

--- a/rdf.html
+++ b/rdf.html
@@ -93,30 +93,32 @@
 					</h2>
 					<div>
 						<p class="animate-box">We created URIs for 3 different entities and we described each of them in RDF/XML, one of the possibile serializations of RDF:
-							<ul class="animate-box">
-								<li>PEOPLE - Napoleon: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</span></li>
-							</br>
-							<img src="images/xmlnapoleon.jpg" alt="" class="animate-box img-responsive">
-							</br>
-							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/napoleon.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
-							</br>
-							</br>
-								<li>PLACE - Rochefort: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</span></li>
-							</br>
-							<img src="images/xmlplace.jpg" alt="" class="animate-box img-responsive">
-							</br>
-							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/rochefort.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
-							</br>
-							</br>
-								<li>CONCEPT/SUBJECT: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</span></li>
-							</br>
-							<img src="images/xmlconcept.jpg" alt="" class="animate-box img-responsive">
-							</br>
-							<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/surrender.xml" target="_blank">RDF/XML</a> of this entity here.</span></p>
-							</br>
-							</br>
-							</ul>
+							<div>
+								<p class="animate-box fadeIn animated">
+									PEOPLE - Napoleon: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</span></li>
+									</br>
+									<img src="images/xmlnapoleon.jpg" alt="" class="animate-box img-responsive">
+								</p>
+								<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/napoleon.xml" target="_blank">RDF/XML</a> of this entity here.</span>
+								</p>
 
+
+								<p class="animate-box fadeIn animated">
+									PLACE - Rochefort: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</span></li>
+									</br>
+									<img src="images/xmlplace.jpg" alt="" class="animate-box img-responsive">
+								</p>
+								<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/rochefort.xml" target="_blank">RDF/XML</a> of this entity here.</span>
+								</p>
+
+								<p class="animate-box fadeIn animated">
+									CONCEPT/SUBJECT: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</span></li>
+									</br>
+									<img src="images/xmlconcept.jpg" alt="" class="animate-box img-responsive">
+								</p>
+								<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/surrender.xml" target="_blank">RDF/XML</a> of this entity here.</span>
+								</p>
+					
 					<nav aria-label="...">
 						<ul class="pager">
 							<li class="previous"><a href="description.html"><span aria-hidden="true">&larr;</span> Description of data</a></li>
